--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -743,6 +743,9 @@ config PROCESS_RECLAIM
 	 (addr, addr + size-bytes) of the process.
 
 	 Any other vaule is ignored.
+config VMSTAT_INTERVAL
+	 int "Default interval in seconds to update vmstat"
+	 default 1
 
 config VM_MAX_READAHEAD
 	int "default max readahead window size"
