--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -564,7 +564,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
@@ -2326,7 +2326,7 @@ CONFIG_SMB138X_CHARGER=y
 CONFIG_QPNP_QNOVO=y
 # CONFIG_POWER_AVS is not set
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
+# CONFIG_APSS_CORE_EA is not set
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
