--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1366,7 +1366,7 @@ config SCHED_TUNE
 	  If unsure, say N.
 
 config CPUSETS_ASSIST
-	bool "Cpusets configuration helper"
+	bool "Cpuset configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
 	help
