--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -395,16 +395,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-CONFIG_ARM64_SW_TTBR0_PAN=y
-
-#
-# ARMv8.1 architectural features
-#
-# CONFIG_ARM64_HW_AFDBM is not set
-# CONFIG_ARM64_PAN is not set
-# CONFIG_ARM64_LSE_ATOMICS is not set
-# CONFIG_ARM64_UAO is not set
-CONFIG_RELOCATABLE=y
+CONFIG_ARM64_PAN=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
