--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -4263,6 +4263,9 @@ CONFIG_DEBUG_FS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=5
+CONFIG_FTRACE=y
+CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_TRACING_EVENTS_GPIO is not set
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
