--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -142,6 +142,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_CGROUPS=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_DEVICE is not set
@@ -216,13 +217,16 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
+# CONFIG_ASLR_FULL is not set
+# CONFIG_ASLR_PARTIAL is not set
+CONFIG_ASLR_NONE=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
-# CONFIG_JUMP_LABEL is not set
+CONFIG_JUMP_LABEL=y
 # CONFIG_UPROBES is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -246,7 +250,7 @@ CONFIG_HAVE_CMPXCHG_LOCAL=y
 CONFIG_HAVE_CMPXCHG_DOUBLE=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
-CONFIG_SECCOMP_FILTER=y
+# CONFIG_SECCOMP_FILTER is not set
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
@@ -474,7 +478,7 @@ CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
-CONFIG_BOUNCE=y
+# CONFIG_BOUNCE is not set
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
@@ -495,7 +499,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_FRAME_VECTOR=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
-CONFIG_SECCOMP=y
+# CONFIG_SECCOMP is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
@@ -513,8 +517,8 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
 # CONFIG_ARM64_UAO is not set
-CONFIG_RELOCATABLE=y
-CONFIG_RANDOMIZE_BASE=y
+# CONFIG_RELOCATABLE is not set
+# CONFIG_RANDOMIZE_BASE is not set
 # CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 
 #
@@ -1193,7 +1197,7 @@ CONFIG_OF_ADDRESS=y
 CONFIG_OF_ADDRESS_PCI=y
 CONFIG_OF_IRQ=y
 CONFIG_OF_NET=y
-CONFIG_OF_MDIO=y
+# CONFIG_OF_MDIO is not set
 CONFIG_OF_PCI=y
 CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_RESERVED_MEM=y
@@ -1269,7 +1273,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_QPNP_MISC=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
-CONFIG_ANT_CHECK=y
+# CONFIG_ANT_CHECK is not set
 # CONFIG_ANT_CHECK_D2S_CN is not set
 # CONFIG_C2PORT is not set
 
@@ -4125,7 +4129,7 @@ CONFIG_RMNET_IPA3=y
 CONFIG_GPIO_USB_DETECT=y
 # CONFIG_MSM_MHI is not set
 CONFIG_MSM_11AD=y
-CONFIG_SEEMP_CORE=y
+# CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 CONFIG_MSM_EXT_DISPLAY=y
 # CONFIG_SDIO_QCN is not set
@@ -4245,7 +4249,6 @@ CONFIG_MSM_GLINK_SPI_XPRT=y
 CONFIG_MSM_SPCOM=y
 CONFIG_MSM_SPSS_UTILS=y
 CONFIG_MSM_SMP2P=y
-CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_QMI_INTERFACE=y
 # CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
