--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -500,6 +500,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_FRAME_VECTOR=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 # CONFIG_SECCOMP is not set
+CONFIG_VMSTAT_INTERVAL=20
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
