--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -224,7 +224,7 @@ CONFIG_PERF_EVENTS=y
 CONFIG_ASLR_NONE=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-CONFIG_SLUB_CPU_PARTIAL=y
+# CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
