--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -682,10 +682,7 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_BBR=y
-CONFIG_TCP_CONG_WESTWOOD=y
-# CONFIG_DEFAULT_CUBIC is not set
-CONFIG_DEFAULT_WESTWOOD
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
