back to my model

--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -55,6 +55,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			qcom,ea = <&ea0>;
 			efficiency = <636>;
+			capacity-dmips-mhz = <636>;
 			next-level-cache = <&L2_0>;
 			L2_0: l2-cache {
 				compatible = "arm,arch-cache";
@@ -85,6 +86,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			qcom,ea = <&ea1>;
 			efficiency = <636>;
+			capacity-dmips-mhz = <636>;
 			next-level-cache = <&L2_0>;
 			L1_I_1: l1-icache {
 				compatible = "arm,arch-cache";
@@ -109,6 +111,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			qcom,ea = <&ea2>;
 			efficiency = <636>;
+			capacity-dmips-mhz = <636>;
 			next-level-cache = <&L2_0>;
 			L1_I_2: l1-icache {
 				compatible = "arm,arch-cache";
@@ -133,6 +136,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
 			qcom,ea = <&ea3>;
 			efficiency = <636>;
+			capacity-dmips-mhz = <636>;
 			next-level-cache = <&L2_0>;
 			L1_I_3: l1-icache {
 				compatible = "arm,arch-cache";
@@ -157,6 +161,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			qcom,ea = <&ea4>;
 			efficiency = <1024>;
+			capacity-dmips-mhz = <1024>;
 			next-level-cache = <&L2_1>;
 			L2_1: l2-cache {
 				compatible = "arm,arch-cache";
@@ -185,6 +190,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			qcom,ea = <&ea5>;
 			efficiency = <1024>;
+			capacity-dmips-mhz = <1024>;
 			next-level-cache = <&L2_1>;
 			L1_I_101: l1-icache {
 				compatible = "arm,arch-cache";
@@ -209,6 +215,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			qcom,ea = <&ea6>;
 			efficiency = <1024>;
+			capacity-dmips-mhz = <1024>;
 			next-level-cache = <&L2_1>;
 			L1_I_102: l1-icache {
 				compatible = "arm,arch-cache";
@@ -233,6 +240,7 @@
 			qcom,lmh-dcvs = <&lmh_dcvs1>;
 			qcom,ea = <&ea7>;
 			efficiency = <1024>;
+			capacity-dmips-mhz = <1024>;
 			next-level-cache = <&L2_1>;
 			L1_I_103: l1-icache {
 				compatible = "arm,arch-cache";
@@ -291,9 +299,9 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				443	125
-				504	169
-				531	196
+				442	134
+				503	179
+				531	228
 			>;
 			idle-cost-data = <
 				20 16 10 8
@@ -302,10 +310,10 @@
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				811	478
-				909	577
-				999	685
-				1024	833
+				810	474
+				908	578
+				997	694
+				1024	736
 			>;
 			idle-cost-data = <
 				100 80 60 40
@@ -314,8 +322,8 @@
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				443	9
-				504	11
+				442	9
+				503	11
 				531	13
 			>;
 			idle-cost-data = <
@@ -325,9 +333,9 @@
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				811	25
-				909	31
-				999	37
+				810	25
+				908	31
+				997	37
 				1024	44
 			>;
 			idle-cost-data = <
