defconfig: turn off some more logging

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -4306,7 +4306,7 @@ CONFIG_MSM_AVTIMER=y
 # CONFIG_MSM_KERNEL_PROTECT is not set
 CONFIG_MSM_SERVICE_NOTIFIER=y
 CONFIG_MSM_QBT1000=y
-CONFIG_MSM_RPM_LOG=y
+# CONFIG_MSM_RPM_LOG is not set
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_WCD_DSP_GLINK=y
@@ -4638,7 +4638,7 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_ISCSI_IBFT is not set
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
@@ -4967,7 +4967,7 @@ CONFIG_TRACE_CLOCK=y
 CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_IPC_LOGGING=y
+# CONFIG_IPC_LOGGING is not set
 # CONFIG_QCOM_RTB is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
